apply plugin: 'java-library'
apply plugin: 'pegasus'

tasks.withType(JavaCompile).configureEach {
    javaCompiler = javaToolchains.compilerFor {
        languageVersion = JavaLanguageVersion.of(11)
    }
}
tasks.withType(Test).configureEach {
    javaLauncher = javaToolchains.launcherFor {
        languageVersion = JavaLanguageVersion.of(11)
    }
}

dependencies {
    api spec.product.pegasus.data
    implementation externalDependency.commonsLang
    implementation(externalDependency.reflections) {
        exclude group: 'com.google.guava', module: 'guava'
    }
    implementation externalDependency.guava

    implementation externalDependency.slf4jApi
    compileOnly externalDependency.lombok
    annotationProcessor externalDependency.lombok

    testImplementation externalDependency.assertJ
    testImplementation externalDependency.commonsIo
    testImplementation project(':test-models')
    testImplementation project(path: ':test-models', configuration: 'testDataTemplate')
    testImplementation externalDependency.testngJava8
}

idea {
    module {
        sourceDirs += file('src/main/javaPegasus')
    }
}

// Need to compile backing java parameterDefinitions with the data template.
sourceSets.mainGeneratedDataTemplate.java.srcDirs('src/main/javaPegasus/')